--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "predeploy": "GH_PAGES=true vite build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
-    "vite": "^6.3.5",
-    "gh-pages": "^6.1.1"
+    "gh-pages": "^6.3.0",
+    "vite": "^6.3.5"
   }
 }
