--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --open",
     "build": "vite build",
     "preview": "vite preview",
     "predeploy": "npm run build",
